--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -153,7 +153,7 @@
         app:layout_constraintStart_toStartOf="@+id/guideline_izq"
         app:layout_constraintTop_toBottomOf="@+id/btn_google" />
 
-    <view
+    <View
         android:id="@+id/login_separator"
         android:layout_width="0dp"
         android:layout_height="1dp"
