--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword" />
 
 
-    <view
+    <View
         android:id="@+id/login_separator"
         android:layout_width="0dp"
         android:layout_height="1dp"
