--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -15,6 +15,8 @@
     <color name="login_form_details_light">#33FFFFFF</color>
     <color name="login_form_details_more_light">#26FFFFFF</color>
     <color name="login_form_details_medium">#66FFFFFF</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#CCFFFFFF</color>
 
 
 </resources>
