--- a/app/src/main/res/layout/activity_create_pet.xml
+++ b/app/src/main/res/layout/activity_create_pet.xml
@@ -51,17 +51,17 @@
         app:layout_constraintTop_toBottomOf="@+id/pet_image_create" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="0dp"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:hint="Seleccionar especie"
 
-        app:boxStrokeColor="@color/login_form_details_light"
+        android:hint="Seleccionar especie"
         android:textColorHint="@color/login_form_details"
-        app:hintTextColor="@color/login_form_details"
+        app:boxStrokeColor="@color/login_form_details_light"
         app:boxStrokeWidth="1dp"
         app:endIconTint="@color/login_form_details"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+        app:hintTextColor="@color/login_form_details"
         app:layout_constraintEnd_toStartOf="@+id/guideline4_dcha"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/guideline4_izq"
@@ -72,8 +72,8 @@
             android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:enabled="true"
-            android:textColor="@color/login_form_details"
-            android:inputType="none"/>
+            android:inputType="none"
+            android:textColor="@color/login_form_details" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
