--- a/app/src/main/res/layout/activity_select_breed.xml
+++ b/app/src/main/res/layout/activity_select_breed.xml
@@ -22,9 +22,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPetBreeds"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="125dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
