--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here.MaterialComponents -->
     </style>
+
+    <style name="AppTheme.Picker" parent="Theme.AppCompat.DayNight.NoActionBar" >
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="colorControlNormal">@color/black</item>
+        <item name="android:textSize">35dp</item>
+    </style>
 </resources>
