--- a/app/src/main/res/layout/activity_select_or_add_pet.xml
+++ b/app/src/main/res/layout/activity_select_or_add_pet.xml
@@ -28,10 +28,22 @@
         android:id="@+id/rvPets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2_dcha"
         app:layout_constraintStart_toStartOf="@+id/guideline2_izq"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivAddPet"
+        android:layout_width="185dp"
+        android:layout_height="185dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/icono_add_pet" />
 
 
     <!--<ImageView
