--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,4 +19,11 @@
         <item name="colorControlNormal">@color/black</item>
         <item name="android:textSize">35dp</item>
     </style>
+
+
+    <style name="Theme.Fab_Bottom_app_bar_dark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">#0F9D58</item>
+        <item name="colorPrimaryVariant">#0F9D58</item>
+        <item name="colorOnPrimary">#000</item>
+    </style>
 </resources>
