--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,11 @@
         <item name="android:textSize">35dp</item>
     </style>
 
+
+    <style name="Theme.Fab_Bottom_app_bar_Light" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="colorPrimary">#0F9D58</item>
+        <item name="colorPrimaryVariant">#0F9D58</item>
+        <item name="colorOnPrimary">#000</item>
+    </style>
+
 </resources>
